{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 147,
  "lineage": "591bdc17-2729-f8e3-189e-fad3454c449a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f671c0dc2143b1d7",
            "association_id": "eipassoc-0d0f7856666c29988",
            "domain": "vpc",
            "id": "eipalloc-0f671c0dc2143b1d7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0708127e6e2bf3161",
            "private_dns": "ip-10-0-7-79.ec2.internal",
            "private_ip": "10.0.7.79",
            "public_dns": "ec2-44-205-200-130.compute-1.amazonaws.com",
            "public_ip": "44.205.200.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-lab-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:413261057581:instance/i-00f9983fa3ae43550",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f9983fa3ae43550",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bcdafe1e275ddac3",
            "private_dns": "ip-10-0-7-49.ec2.internal",
            "private_ip": "10.0.7.49",
            "public_dns": "ec2-52-91-187-199.compute-1.amazonaws.com",
            "public_ip": "52.91.187.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-028d21c1d3f3cfd3f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b67362453c9ee493",
            "tags": {
              "Name": "Dev-lab-1"
            },
            "tags_all": {
              "Name": "Dev-lab-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012b340558d9d9c2d",
              "sg-0bb2fa6ff8c1b3872",
              "sg-0eafaf9ed885f4a71"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-http",
            "aws_security_group.acesso-https",
            "aws_security_group.acesso-ssh",
            "aws_subnet.private_subnet_1",
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev-lab-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0022f774911c1d690",
            "arn": "arn:aws:ec2:us-east-1:413261057581:instance/i-0cc3fbfe51aecf89d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc3fbfe51aecf89d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04e4a95586eb98bdd",
            "private_dns": "ip-10-0-8-57.ec2.internal",
            "private_ip": "10.0.8.57",
            "public_dns": "ec2-54-167-116-65.compute-1.amazonaws.com",
            "public_ip": "54.167.116.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efa244d724a6c6ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2299f8a28a37c96",
            "tags": {
              "Name": "Dev-lab-2"
            },
            "tags_all": {
              "Name": "Dev-lab-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-012b340558d9d9c2d",
              "sg-0bb2fa6ff8c1b3872",
              "sg-0eafaf9ed885f4a71"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso-http",
            "aws_security_group.acesso-https",
            "aws_security_group.acesso-ssh",
            "aws_subnet.private_subnet_2",
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:internet-gateway/igw-0b299d7ec956c466e",
            "id": "igw-0b299d7ec956c466e",
            "owner_id": "413261057581",
            "tags": {
              "Name": "lab_teste"
            },
            "tags_all": {
              "Name": "lab_teste"
            },
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "dependencies": [
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "balance-lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:413261057581:loadbalancer/app/lab-teste-tf/fefe0b74e82145b9",
            "arn_suffix": "app/lab-teste-tf/fefe0b74e82145b9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lab-teste-tf-1645798198.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:413261057581:loadbalancer/app/lab-teste-tf/fefe0b74e82145b9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab-teste-tf",
            "security_groups": [
              "sg-0eafaf9ed885f4a71"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b67362453c9ee493"
              },
              {
                "subnet_id": "subnet-0d2299f8a28a37c96"
              }
            ],
            "subnets": [
              "subnet-0b67362453c9ee493",
              "subnet-0d2299f8a28a37c96"
            ],
            "vpc_id": "vpc-06ec5a1148dc63fc9",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.acesso-http",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f671c0dc2143b1d7",
            "connectivity_type": "public",
            "id": "nat-0a2f6e0939d3e49f8",
            "network_interface_id": "eni-0708127e6e2bf3161",
            "private_ip": "10.0.7.79",
            "public_ip": "44.205.200.130",
            "subnet_id": "subnet-0b67362453c9ee493"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.private_subnet_1",
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:route-table/rtb-0f92d14b6bae08b69",
            "id": "rtb-0f92d14b6bae08b69",
            "owner_id": "413261057581",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a2f6e0939d3e49f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Rota djalma"
            },
            "tags_all": {
              "Name": "Rota djalma"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb13e5e3372b521f",
            "route_table_id": "rtb-0f92d14b6bae08b69",
            "subnet_id": "subnet-0b67362453c9ee493"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.router",
            "aws_subnet.private_subnet_1",
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:security-group/sg-0eafaf9ed885f4a71",
            "description": "acesso-http",
            "egress": [],
            "id": "sg-0eafaf9ed885f4a71",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acesso-http",
            "name_prefix": "",
            "owner_id": "413261057581",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:security-group/sg-012b340558d9d9c2d",
            "description": "acesso-https",
            "egress": [],
            "id": "sg-012b340558d9d9c2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "acesso-https",
            "name_prefix": "",
            "owner_id": "413261057581",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:security-group/sg-0bb2fa6ff8c1b3872",
            "description": "acesso-ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "179.124.141.13/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0bb2fa6ff8c1b3872",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "acesso-ssh",
            "name_prefix": "",
            "owner_id": "413261057581",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:subnet/subnet-0b67362453c9ee493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b67362453c9ee493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413261057581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-priv-1"
            },
            "tags_all": {
              "Name": "subnet-priv-1"
            },
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "dependencies": [
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:subnet/subnet-0d2299f8a28a37c96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2299f8a28a37c96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413261057581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-priv-2"
            },
            "tags_all": {
              "Name": "subnet-priv-2"
            },
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "dependencies": [
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:subnet/subnet-0c41e5a63a6aa735c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c41e5a63a6aa735c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413261057581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub-1"
            },
            "tags_all": {
              "Name": "subnet-pub-1"
            },
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "dependencies": [
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:subnet/subnet-09a9a899afcea28ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a9a899afcea28ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413261057581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub-2"
            },
            "tags_all": {
              "Name": "subnet-pub-2"
            },
            "vpc_id": "vpc-06ec5a1148dc63fc9"
          },
          "dependencies": [
            "aws_vpc.vpc-lab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413261057581:vpc/vpc-06ec5a1148dc63fc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d035b5992533b6d6",
            "default_route_table_id": "rtb-05ed550251755857d",
            "default_security_group_id": "sg-02cfce6a4abfd91fc",
            "dhcp_options_id": "dopt-0f50a0f4345984d29",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06ec5a1148dc63fc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ed550251755857d",
            "owner_id": "413261057581",
            "tags": {
              "Name": "Vpc lab"
            },
            "tags_all": {
              "Name": "Vpc lab"
            }
          }
        }
      ]
    }
  ]
}